4/18/2022 - 1:29 PM - 3:27 PM - Updated background color so that it is determined by the preset selected color of kelly green. Added back end functionality to CompanyEntityRecordCreate so that it "should" overwrite the companydata file with updated company info.  Also added two bool fields to companyentityclass that help determine application funcationlity how it uses the data and where to put it.
4/18/2022 - 4:39 PM - 6:36 PM - Updated ContactSearchByCompanyPage, moved the title over above the contacts listed and added company information title.  Created CaseSearchByContactPage.xaml from ContactSearchByCompanyPage.  Updated ContactEntityRecordRetrieve and included search in it.  Stopped after getting all rawcontactList, still need to create logic to seperate contacts into contactFoundList.

--- a/ClientMCR/AddContactEntityToCompanyPage.xaml
+++ b/ClientMCR/AddContactEntityToCompanyPage.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:ClientMCR"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
-      Title="AddContactEntityToCompanyPage" Background="#FF5B689D">
+      Title="AddContactEntityToCompanyPage">
+    <!--Background="#FF5B689D"-->
 
     <Border BorderThickness="20, 20, 20, 20">
         <Grid>
