--- a/ClientMCR/CaseSearchByContactPage.xaml
+++ b/ClientMCR/CaseSearchByContactPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ClientMCR.ContactSearchByCompanyPage"
+﻿<Page x:Class="ClientMCR.CaseSearchByContactPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,8 @@
       xmlns:local="clr-namespace:ClientMCR"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ContactSearchByCompanyPage" >
-    <!--Background="#FF5B689D"-->
-    
+      Title="CaseSearchByContactPage">
+
 
     <Grid>
         <Grid.RowDefinitions>
@@ -58,8 +57,8 @@
                             <StackPanel Grid.Column="1" Grid.Row="0" >
                                 <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
                             </StackPanel>
-                            
-                            <TextBlock Text="Company Information" FontSize="20" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
+
+                            <TextBlock Text="Contact Information" FontSize="20" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
                             <StackPanel Grid.Row="2" Grid.Column="1"  >
                                 <!--VerticalAlignment="Center"-->
                                 <Grid>
@@ -74,17 +73,17 @@
                                         <ColumnDefinition Width="2*"/>
                                         <ColumnDefinition Width="4*"/>
                                     </Grid.ColumnDefinitions>
-                                    
-                                    <TextBlock Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
-                                    <TextBox x:Name="CompanyNameBox" Text="" Grid.Column="1" Grid.Row="0" />
-                                    <TextBlock Text="Company ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
-                                    <TextBox x:Name="CompanyIDBox" Text="" Grid.Column="1" Grid.Row="1" />
+
+                                    <TextBlock Text="Contact Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
+                                    <TextBox x:Name="ContactNameBox" Text="" Grid.Column="1" Grid.Row="0" />
+                                    <TextBlock Text="Contact ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                                    <TextBox x:Name="ContactIDBox" Text="" Grid.Column="1" Grid.Row="1" />
                                     <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
-                                    <TextBox x:Name="CompanyPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="2" />
+                                    <TextBox x:Name="ContactPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="2" />
                                     <TextBlock Text="Phone extension" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                                    <TextBox x:Name="CompanyPhoneExtensionBox" Text="" Grid.Column="1" Grid.Row="3" />
+                                    <TextBox x:Name="ContactPhoneExtensionBox" Text="" Grid.Column="1" Grid.Row="3" />
                                     <TextBlock Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
-                                    <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                                    <TextBox x:Name="ContacteMailBox" Text="" Grid.Column="1" Grid.Row="4"/>
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="3" >
@@ -109,17 +108,6 @@
                                         <ColumnDefinition Width="2*"/>
                                         <ColumnDefinition Width="4*"/>
                                     </Grid.ColumnDefinitions>
-                                    <!--This line is commented out because it belongs on another form/page - Search by customer info should be seperate from company search info-->
-                                    <!--<TextBlock Text="First Name           " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
-                                    <TextBox x:Name="CustomerFirstNameBox" Text="" Grid.Column="1" Grid.Row="1" />
-                                    <TextBlock Text="Last Name   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
-                                    <TextBox x:Name="CustomerLastNameBox" Text="" Grid.Column="1" Grid.Row="2" />
-                                    <TextBlock Text="Customer ID   " Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                                    <TextBox x:Name="CustomerIDBox" Text="" Grid.Column="1" Grid.Row="3" />
-                                    <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
-                                    <TextBox x:Name="CustomerPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="4"/>
-                                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
-                                    <TextBox x:Name="CustomereMailBox" Text="" Grid.Column="1" Grid.Row="5"/>-->
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" >
@@ -164,12 +152,13 @@
                                     <!--This line is commented out because it belongs on another form/page - Search by customer info should be seperate from company search info-->
                                     <Button Content="Add a New Company" Grid.Column="1" Grid.Row="0" Click="AddCompanyEntityButton"  />
                                     <Button Content="Search for Contact" Grid.Column="3" Grid.Row="0" Click="SearchContact"/>
-                                    <Button Content="Edit Company" Grid.Column="1" Grid.Row="2" Click="EditCompany"/>
+                                    <Button Content="Edit Contact" Grid.Column="1" Grid.Row="2" Click="EditContact"/>
                                     <Button Content="Search for Company" Grid.Column="3" Grid.Row="2" Click="SearchCompany" />
                                     <Button Content="empty" Grid.Column="3" Grid.Row="3" IsEnabled="False" Visibility ="Hidden"/>
                                     <!--<Button Content="Add Customer" Grid.Column="3" Grid.Row="0"/>-->
-                                    <Button Content="Add Contact" Grid.Column="1" Grid.Row="4" Click="AddContactEntityButton" />
+                                    <Button Content="Add a New Contact" Grid.Column="1" Grid.Row="4" Click="AddContactEntityButton" />
                                     <Button Content="empty" Grid.Column="3" Grid.Row="1" IsEnabled="False" Visibility ="Hidden"/>
+                                    <Button Content="Open New Ticket" Grid.Column="3" Grid.Row="4" Click="OpenNewTicket"/>
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="8">
@@ -178,11 +167,11 @@
                         </Grid>
                     </StackPanel>
                     <!--MainSearchArea-->
-                    
+
                     <StackPanel Grid.Column="1" Grid.Row="0">
-                        <TextBlock Text="Contact Search by Company Found" FontSize="20" Grid.Column="1" Grid.Row="0" Margin="20, 20, 20, 0" Background="#C8D1F4" />
+                        <TextBlock Text="Case Search by Contact Found" FontSize="20" Grid.Column="1" Grid.Row="0" Margin="20, 20, 20, 0" Background="#C8D1F4" />
                         <Border BorderThickness="20, 0, 20, 0">
-                            
+
                             <Grid x:Name="SearchWindowGrid">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*"/>
@@ -194,11 +183,11 @@
                                     <RowDefinition Height="1*"/>
                                     <RowDefinition Height="1*"/>
                                 </Grid.RowDefinitions>
-                                
-                                <TextBlock Text="Contact Name" Grid.Column="0" Grid.Row="1" Background="#C8D1F4" />
-                                <TextBlock Text="Contact ID" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
-                                <TextBlock Text="Contact Phone #" Grid.Column="2" Grid.Row="1" Background="#C8D1F4" />
-                                <TextBlock Text="Contact eMail" Grid.Column="3" Grid.Row="1" Background="#C8D1F4" />
+
+                                <TextBlock Text="Ticket Number" Grid.Column="0" Grid.Row="1" Background="#C8D1F4" />
+                                <TextBlock Text="Date Ticket Opened" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
+                                <TextBlock Text="Status" Grid.Column="2" Grid.Row="1" Background="#C8D1F4" />
+                                <TextBlock Text="Description" Grid.Column="3" Grid.Row="1" Background="#C8D1F4" />
                             </Grid>
                         </Border>
                     </StackPanel>
