--- a/ClientMCR/CompanyCustomerSearchResults.xaml
+++ b/ClientMCR/CompanyCustomerSearchResults.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientMCR"
         mc:Ignorable="d"
-        Title="CompanyCustomerSearchResults" Height="450" Width="800" Background="#FF5B689D">
+        Title="CompanyCustomerSearchResults" Height="450" Width="800">
+    <!--Background="#FF5B689D"-->
+
     <Grid>
 
     </Grid>
