--- a/ClientMCR/AddCompanyEntityPage.xaml
+++ b/ClientMCR/AddCompanyEntityPage.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:ClientMCR"
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="800"
-      Title="AddCompanyEntityPage"  Background="#FF5B689D">
+      Title="AddCompanyEntityPage"  >
+    <!--Background="#FF5B689D"-->
 
     <Border BorderThickness="20, 20, 20, 20">
         <Grid>
