--- a/ClientMCR/ContactSearchPage.xaml
+++ b/ClientMCR/ContactSearchPage.xaml
@@ -175,7 +175,7 @@
                     <!--MainSearchArea-->
                     <StackPanel Grid.Column="1" Grid.Row="0">
                         <Border BorderThickness="20, 20, 20, 0">
-                            <Grid>
+                            <Grid x:Name="SearchWindowGrid">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*"/>
                                     <ColumnDefinition Width="1*"/>
@@ -185,7 +185,7 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="1*"/>
                                 </Grid.RowDefinitions>
-                                <TextBlock Text="Contact Name" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock x:Name="Contact_Name" Text="Contact Name" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
                                 <TextBlock Text="Contact ID" Grid.Column="1" Grid.Row="0" Background="#C8D1F4" />
                                 <TextBlock Text="Contact Phone #" Grid.Column="2" Grid.Row="0" Background="#C8D1F4" />
                                 <TextBlock Text="Contact eMail" Grid.Column="3" Grid.Row="0" Background="#C8D1F4" />
