4/20/2022 - 1:30 PM - 2:40 PM - The bug was actually in ContactSearchbyCompanyPage in the xaml, the rows for the header were set to 1 and not 0.  Updated the company information fields so that they can not be edited by the user.  After creating a new user i'm getting null values when passed to CaseSearchbyContactFound and ExceptionThrown is file not found / authorisedaccessException.  I didn't set the contactdata.txt as the file to open, so it was opening nothing in ContactEntityRecordRetrieve.  Updated ContactEntityClass so that it has a ContactEntityID along with CompanyEntityID, and ContactID.
4/20/2022 - 2:54 PM - 3:50 PM - Updated CompanyEntityClass, added Companies Directory, updated code to account for the new sub directory.  When searching for companies with phone as the subject line it is returning directories that should not be returned.  Also getting the ghost company directory returned in the search.

4/20/2022 - 5:47 PM - 6:50 PM - added dirs.RemoveAt(0); to companyEntityRecordSearch to fix the ghost company showing up in the search.  Added functionality to remove search results when clear form or search is clicked.

4/20/2022 - 6:59 PM - - Added MainDataManager class and created static method for getting the path.  Added Buttons for each column for search company window.  go to https://stackoverflow.com/questions/36980359/how-to-change-button-text-and-color-on-mouse-enter-using-wpf
for working on on mouse enter method

https://docs.microsoft.com/en-us/dotnet/api/system.windows.controls.primitives.buttonbase?view=windowsdesktop-6.0

--- a/ClientMCR/CaseSearchByContactPage.xaml
+++ b/ClientMCR/CaseSearchByContactPage.xaml
@@ -75,15 +75,15 @@
                                     </Grid.ColumnDefinitions>
 
                                     <TextBlock Text="Contact Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
-                                    <TextBox x:Name="ContactNameBox" Text="" Grid.Column="1" Grid.Row="0" />
+                                    <TextBlock x:Name="ContactNameBox" Text="" Grid.Column="1" Grid.Row="0" Background="#C8D1F4" />
                                     <TextBlock Text="Contact ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
-                                    <TextBox x:Name="ContactIDBox" Text="" Grid.Column="1" Grid.Row="1" />
+                                    <TextBlock x:Name="ContactIDBox" Text="" Grid.Column="1" Grid.Row="1" Background="#C8D1F4"/>
                                     <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
-                                    <TextBox x:Name="ContactPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="2" />
+                                    <TextBlock x:Name="ContactPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="2" Background="#C8D1F4"/>
                                     <TextBlock Text="Phone extension" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                                    <TextBox x:Name="ContactPhoneExtensionBox" Text="" Grid.Column="1" Grid.Row="3" />
+                                    <TextBlock x:Name="ContactPhoneExtensionBox" Text="" Grid.Column="1" Grid.Row="3" Background="#C8D1F4"/>
                                     <TextBlock Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
-                                    <TextBox x:Name="ContacteMailBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                                    <TextBlock x:Name="ContacteMailBox" Text="" Grid.Column="1" Grid.Row="4" Background="#C8D1F4"/>
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="3" >
@@ -169,7 +169,7 @@
                     <!--MainSearchArea-->
 
                     <StackPanel Grid.Column="1" Grid.Row="0">
-                        <TextBlock Text="Case Search by Contact Found" FontSize="20" Grid.Column="1" Grid.Row="0" Margin="20, 20, 20, 0" Background="#C8D1F4" />
+                        <TextBlock Text="Cases Search by Contact Found" FontSize="20" Grid.Column="1" Grid.Row="0" Margin="20, 20, 20, 0" Background="#C8D1F4" />
                         <Border BorderThickness="20, 0, 20, 0">
 
                             <Grid x:Name="SearchWindowGrid" Background="#C8D1F4">
